src/objects/Apttus__Agreement_Document__c.object
<CustomObject>
    <description>Links to agreement documents that are not stored in Apttus / Salesforce repository.  These could be URLs to files stored on a file server or document management system behind the client&apos;s firewall.</description>
    <fields>
        <fullName>Apttus__Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>Agreement_Document</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__Comments__c</fullName>
        <description>Optional comments about the document</description>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Path__c</fullName>
        <description>The http path to a file located on an internal web server.  It is not necessary to prefix this with http:// since the data type is URL and this gets added automatically.</description>
        <label>Path</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Apttus__Type__c</fullName>
        <description>The type of document (i.e. scanned image, etc)</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scanned Image</fullName>
                    <default>true</default>
                    <label>Scanned Image</label>
                </value>
                <value>
                    <fullName>Final Electronic Copy</fullName>
                </value>
                <value>
                    <fullName>Supporting Attachment</fullName>
                </value>
                <value>
                    <fullName>Interim Version</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__URL_Link__c</fullName>
        <description>A hyperlink that can be clicked on to access the document</description>
        <formula>IF (NOT(ISNULL(Apttus__URL__c)),HYPERLINK(Apttus__URL__c,&quot;View&quot;, &quot;_blank&quot;),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A hyperlink that can be clicked on to access the document</inlineHelpText>
        <label>URL Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__URL__c</fullName>
        <defaultValue>&quot;http://&quot;</defaultValue>
        <description>The http://, https:// or file:// URL to the document.  This field should contain the fully qualified URL path to the document.</description>
        <inlineHelpText>The http://, https:// or file:// URL to the document.  This field should contain the fully qualified URL path to the document.</inlineHelpText>
        <label>URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Version__c</fullName>
        <description>Optional version information about the document</description>
        <label>Version</label>
        <type>TextArea</type>
    </fields>
    <label>Agreement Document</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>